add username to user
